examples/test_package/DoubleDC_Test/steps/pl___coin_:rough.pl_run4/#test_results_result.txt
Error evaluating Problog model:
    rf = self.fold(
         ^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/parser.py", line 1101, in fold
    raise ParseError(
problog.parser.ParseError: Operator priority clash at 8:25.Error evaluating Problog model:
    rf = self.fold(
         ^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/parser.py", line 1101, in fold
    raise ParseError(
problog.parser.ParseError: Operator priority clash at 8:25.Error evaluating Problog model:
    result = self.handle_nonground(
             ^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 905, in handle_nonground
    raise NonGroundProbabilisticClause(location=database.lineno(node.location))
problog.engine.NonGroundProbabilisticClause: Encountered a non-ground probabilistic clause at 1:5.